Update readme to point to primaza/primaza repository
Signed-off-by: Andy Sadler <ansadler@redhat.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,3 +13,8 @@ jobs:
       - name: Check commit ${{ github.sha }}
         run: |
           echo "Hello, world!"
+          echo "Thinking..."
+
+          sleep 30
+
+          echo "Done!"
